# learning_langgraph

./: .gitignore  README.md  chatbot_v1.py  chatbot_v1_2.py  main.py  pyproject.toml
chatbot/: __init__.py  chatbot_app.py  chatbot_app_backend.py  chatbot_v1.py  chatbot_v1_2.py
conditional_workflow/: review_response_workflow.ipynb
parallel_workflow/: upse_essay_review_workflow.ipynb
sequential_workflow/: blog_generator_workflow.ipynb  bmi_calculator_workflow.ipynb  simple_llm_workflow.ipynb
